--- a/package.json
+++ b/package.json
@@ -9,22 +9,23 @@
   "bugs": "https://github.com/the-economist-editorial/component-masthead/issues",
   "main": "index.js",
   "browserify": {
-    "transform": {
-      "0": {
-        "0": "babelify",
-        "1": {
+    "transform": [
+      [
+        "babelify",
+        {
           "stage": 0
         }
-      }
-    }
+      ]
+    ]
   },
   "eslintConfig": {
     "extends": "strict"
   },
   "scripts": {
     "lint": "eslint .",
-    "preinstall": "devpack-configure ./package.json",
-    "prepublish": "browserify -u react -d index.js -p [minifyify --bundle bundle.map.json] > bundle.js",
+    "postinstall": "devpack-configure ./package.json",
+    "preinstall": "",
+    "prepublish": "browserify -u react -d index.js -p [minifyify --output bundle.map.json] > bundle.js",
     "serve": "component-devserver .",
     "test": "npm run test:base -- -R tap",
     "test:base": "mocha -r babel/register -r @economist/component-testharness",
@@ -34,7 +35,8 @@
     "react": "^0.13.3"
   },
   "devDependencies": {
-    "@economist/component-devserver": "^1.0.0",
+    "@economist/component-devpack": "^1.4.1",
+    "@economist/component-devserver": "^1.5.1",
     "@economist/component-testharness": "^1.0.0",
     "babel": "^5.5.8",
     "babelify": "^6.1.2",
@@ -43,6 +45,7 @@
     "eslint-config-strict": "^2.0.0",
     "eslint-plugin-filenames": "^0.1.1",
     "eslint-plugin-one-variable-per-var": "^0.0.3",
+    "minifyify": "^7.0.1",
     "mocha": "^2.2.5"
   }
 }
