--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "component-masthead",
+  "name": "component-page",
   "version": "1.0.0",
-  "description": "A basic MH",
+  "description": "A basic page",
   "author": "The Economist (http://economist.com)",
   "license": "ISC",
-  "repository": "git@github.com:the-economist-editorial/component-masthead.git",
-  "homepage": "https://github.com/the-economist-editorial/component-masthead/wiki",
-  "bugs": "https://github.com/the-economist-editorial/component-masthead/issues",
+  "repository": "git@github.com:the-economist-editorial/component-page.git",
+  "homepage": "https://github.com/the-economist-editorial/component-page/wiki",
+  "bugs": "https://github.com/the-economist-editorial/component-page/issues",
   "main": "index.js",
   "browserify": {
     "transform": [
