--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "test:watch": "npm run test:base -- -wR min"
   },
   "dependencies": {
+    "@economist/component-icon": "^2.1.0",
     "react": "^0.13.3"
   },
   "devDependencies": {
@@ -71,14 +72,11 @@
     "@economist/component-icon": "^2.0.0",
     "@economist/component-testharness": "^1.1.0",
     "babel": "^5.5.8",
-    "babelify": "^6.1.2",
-    "browserify": "^10.2.4",
     "eslint": "^0.24.0",
     "eslint-config-strict": "^2.4.0",
     "eslint-plugin-filenames": "^0.1.1",
     "eslint-plugin-one-variable-per-var": "^0.0.3",
     "eslint-plugin-react": "^2.6.3",
-    "minifyify": "^7.0.1",
     "mocha": "^2.2.5",
     "pre-commit": "^1.0.10"
   },
