--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
   "homepage": "https://github.com/the-economist-editorial/component-masthead/wiki",
   "bugs": "https://github.com/the-economist-editorial/component-masthead/issues",
   "main": "index.js",
+  "files": [
+    "*.js",
+    "*.css",
+    "assets/*"
+  ],
   "eslintConfig": {
     "extends": "strict/react",
     "env": {
@@ -18,7 +23,6 @@
     "example": "./example.es6",
     "css": [
       "/node_modules/mocha/mocha.css",
-      "/example.css",
       "/index.css"
     ],
     "js": [
@@ -39,7 +43,7 @@
       {
         "contents": "chai.should();mocha.setup('bdd');"
       },
-      "/test/index.es6?debug&external=react",
+      "/test/index.es6?babelify&debug&external=react",
       {
         "contents": "mocha.checkLeaks();mocha.run();"
       }
@@ -67,9 +71,8 @@
     "react": "^0.13.3"
   },
   "devDependencies": {
-    "@economist/component-devpack": "^2.1.1",
+    "@economist/component-devpack": "^2.3.0",
     "@economist/component-devserver": "^2.0.0",
-    "@economist/component-icon": "^2.0.0",
     "@economist/component-testharness": "^1.1.0",
     "babel": "^5.5.8",
     "eslint": "^0.24.0",
