--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
         "contents": "window.React = require('react');"
       },
       {
-        "contents": "require('react-dom').render(require('example'),document.getElementById('component-preview'));"
+        "contents": "require('react').render(require('example'),document.getElementById('component-preview'));"
       },
       {
         "contents": "if(document.getElementById('mocha')){mocha.checkLeaks();mocha.run();}"
@@ -126,7 +126,7 @@
   },
   "dependencies": {
     "@economist/component-icon": "^3.6.6",
-    "react": "^0.13.3"
+    "react": "^0.14.0"
   },
   "devDependencies": {
     "@economist/component-devpack": "^3.4.3",
